hphp/hack/test/decl/submodules.php.typecheck.exp
File "submodules.php", line 11, characters 3-28:
Cannot access an internal element from module `A.B.C` in module `A.B` (Typing[4444])
  File "submodules.php", line 16, characters 10-35:
  This is from module `A.B.C`
